--- a/Arkanoid/style.css
+++ b/Arkanoid/style.css
@@ -1,6 +1,44 @@
-canvas{
-	width: 400px;
-	height: 400px;
-	border: 1px solid black;
-	background-color: black;
+body {
+    
+}
+
+.menu {
+    border: solid black;
+}
+
+#contenedor {
+    display: none;
+}
+
+#boton {
+    width: 30px;
+    height: 30px;
+    background: url("https://i.ibb.co/jDR2DN7/Icon-Play.png");
+    background-size: 100%;
+}
+
+#boton:hover {
+    cursor: pointer;
+}
+
+audio {
+    display: none;
+}
+
+.musica {
+    width: 30px;
+    height: 30px;
+    display: inline-block;
+    background-Image: url("https://i.ibb.co/wYTqYbL/Vector-Sound-Muted.png");
+    background-size: 100%;
+    border: solid black;
+}
+
+.pausa {
+    width: 30px;
+    height: 30px;
+    display: inline-block;
+    background-Image: url("https://i.ibb.co/GJTLcv7/Icon-Pause2.png");
+    background-size: 100%;
+    border: solid black;
 }
