--- a/Arkanoid/style.css
+++ b/Arkanoid/style.css
@@ -1,12 +1,5 @@
-body {
-    
-}
-
-.menu {
-    border: solid black;
-}
-
 #contenedor {
+    border: solid black;
     display: none;
 }
 
@@ -17,7 +10,11 @@ body {
     background-size: 100%;
 }
 
-#boton:hover {
+.botones {
+    display: none;
+}
+
+button:hover {
     cursor: pointer;
 }
 
@@ -42,3 +39,13 @@ audio {
     background-size: 100%;
     border: solid black;
 }
+
+.reiniciar {
+    width: 30px;
+    height: 30px;
+    display: none;
+    background-Image: url("https://i.ibb.co/sjnThcr/Icon-Repeat.png");
+    background-size: 100%;
+    border: solid black;
+}
+
