--- a/Pong/style.css
+++ b/Pong/style.css
@@ -53,15 +53,6 @@ button:hover {
     border: solid black;
 }
 
-.reiniciar {
-    width: 30px;
-    height: 30px;
-    display: none;
-    background-Image: url("https://i.ibb.co/sjnThcr/Icon-Repeat.png");
-    background-size: 100%;
-    border: solid black;
-}
-
 .terminar {
     margin-left: 10px;
     width: 30px;
@@ -115,4 +106,11 @@ li{
     background-size: 100%;
     height: 30px;
     width: 30px;
+}
+
+.boton-fondo {
+    background-repeat: no-repeat;
+    height: 100px;
+    width: 100px;
+    background-size: 100% 100%;
 }
