--- a/Tic Tac Toe/style.css
+++ b/Tic Tac Toe/style.css
@@ -1,22 +1,24 @@
 body {
-	background: orange;
+    background: orange;
 }
 
 #titulo {
-    margin-left: 30%;
+    text-align: center;
 }
 
 .container {
     border: solid black;
     background: blue;
-    display: inline-block;
+    display: block;
     text-align: center;
+    margin-bottom: 10px;
 }
 
 .container img {
     background-color: gray;
-    height: 40px;
-    width: 40px;
+    height: 30px;
+    width: 30px;
+
 }
 
 #boton_empezar {
@@ -31,7 +33,6 @@ body {
 .datos {
     display: none;
     width: 100%;
-    height: 100px;
     margin-top: 10px;
     border: solid black;
     background-color: blue;
@@ -43,6 +44,10 @@ body {
     width: 100px;
     height: 100px;
     background-color: none;
+}
+
+.datos h3 {
+    text-align: left;
 }
 
 .tablero {
@@ -63,4 +68,5 @@ body {
     margin-top: 10px;
     margin-bottom:10px;
     margin-Left: 10px;
-}
+
+
