--- a/Pong/style.css
+++ b/Pong/style.css
@@ -3,8 +3,10 @@ body {
     font-family: "ArcadeClassicRegular", arial;    
 }
 
+
 #contenedor {
     margin-top: 5px;
+    width: 100%;
     display: none;
 }
 
@@ -102,6 +104,10 @@ li{
     margin-left: 5px;
 }
 
+
+.active {
+    border: solid red;
+}
 .boton-color {
     background-size: 100%;
     height: 30px;
@@ -109,8 +115,11 @@ li{
 }
 
 .boton-fondo {
-    background-repeat: no-repeat;
     height: 100px;
     width: 100px;
     background-size: 100% 100%;
+}
+
+label {
+    margin-left: 20px;
 }
